--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "rollup": "^4.18.0",
     "typescript": "^5.4.5",
-    "vite": "^5.2.12"
+    "vite": "^5.2.12",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
